--- a/HZ3.ipynb
+++ b/HZ3.ipynb
@@ -282,8 +282,8 @@
    "cell_type": "code",
    "source": [
     "plt.figure(figsize=(12, 6))\n",
-    "h1 = plt.hist2d(df['inner_edge'], df['luminosity'], bins=(50,50), norm='log', cmap='Blues', label='Inner Edge')\n",
-    "h2 = plt.hist2d(df['outer_edge'], df['luminosity'], bins=(50,50), norm='log', cmap='viridis', label='Outer Edge')\n",
+    "h1 = plt.hist2d(df['inner_edge'], df['luminosity'], bins=(50,50), norm='log', cmap='magma', label='Inner Edge')\n",
+    "h2 = plt.hist2d(df['outer_edge'], df['luminosity'], bins=(50,50), norm='log', cmap='cividis', label='Outer Edge')\n",
     "plt.colorbar(h1[3], label='Density (Inner Edge)', shrink=0.8)\n",
     "plt.colorbar(h2[3], label='Density (Outer Edge)', shrink=0.8, pad=0.15)\n",
     "# plt.xlim(b1, b2)\n",
