--- a/HZ3.ipynb
+++ b/HZ3.ipynb
@@ -31,7 +31,7 @@
     "calculate_distance = []\n",
     "\n",
     "# Use this to load gstar.csv into dataframe:\n",
-    "file_path = r'' # Fill in the required path for where you have gstar.csv dataset saved\n",
+    "file_path = r'gstar.csv' # Fill in the required path for where you have gstar.csv dataset saved\n",
     "\n",
     "df = pd.read_csv(file_path)\n",
     "print(df.head())"
